--- a/PrettyPinboard.safariextension/Info.plist
+++ b/PrettyPinboard.safariextension/Info.plist
@@ -43,6 +43,8 @@
 			<string>Some</string>
 		</dict>
 	</dict>
+	<key>Update Manifest URL</key>
+	<string>https://github.com/Shpigford/PrettyPinboard/raw/master/prettypinboard.plist</string>
 	<key>Website</key>
 	<string>http://madebysabotage.com</string>
 </dict>
